--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@ button {
   background: #F8EEE7;
   color: #764778;
   border: 1px solid #a871aa;
+  user-select: none;           /* Prevents text selection */
+  -webkit-user-select: none;   /* Safari */
+  -webkit-touch-callout: none; /* Disables the long-press menu on iOS */
+
 }
 
 .save-btn {
